Fix service spacing. Redirect to http.

--- a/src/components/servers-status/servers-status.scss
+++ b/src/components/servers-status/servers-status.scss
@@ -16,6 +16,12 @@
   }
 
   .table {
+	  width: 100%;
+	  table-layout: fixed;
+	  td.svc, th.svc {
+		  word-wrap:break-word;
+		  width: 25%;
+	  }
     tr.has-error {
       color: $red;
     }
